--- a/src/components/ss-backdrop/ss-backdrop.scss
+++ b/src/components/ss-backdrop/ss-backdrop.scss
@@ -4,6 +4,10 @@
   position: fixed;
   width: 100%;
   height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   transition: all 250ms ease-out;
 }
 
