--- a/src/components/ss-input/ss-input.scss
+++ b/src/components/ss-input/ss-input.scss
@@ -35,12 +35,12 @@ $border-color: #cacaca;
   border: 1px solid $border-color;
   position: relative;
   font-size: 14px;
-  line-height: 24px;
+  line-height: 14px;
   box-sizing: border-box;
   border-radius: 4px;
   
   &:focus ~ .floating-label,
-  &:not(:focus):valid ~ .floating-label {
+  &:not(:focus).has-value ~ .floating-label {
     top: -1px;
     font-size: 11px;
   }
