--- a/src/components/ss-input/ss-input.scss
+++ b/src/components/ss-input/ss-input.scss
@@ -5,7 +5,7 @@ $border-color: #cacaca;
   display: inline-block;
   margin-bottom: 12px;
   margin-right: 6px;
-  font-family: 'Roboto', 'Arial', sans-serif;
+  font-family: 'Roboto', Arial, sans-serif;
 }
 
 .input-wrapper {
@@ -48,8 +48,20 @@ $border-color: #cacaca;
 
 select.input-control {
   padding-top: 8px;
+  padding-left: 8px;
   font-family: 'Roboto', 'Arial', sans-serif;
-  min-width: 196px;
+  font-size: 14px;
+  min-width: 185px;
+}
+
+textarea.input-control {
+  font-family: 'Roboto', 'Arial', sans-serif;
+  font-size: 14px;
+}
+
+input.input-control {
+  font-family: 'Roboto', Arial, sans-serif;
+  font-size: 14px;
 }
 
 .floating-label {
