--- a/src/components/ss-modal/ss-modal.scss
+++ b/src/components/ss-modal/ss-modal.scss
@@ -1,9 +1,9 @@
 :host {
-  position: fixed;
+  position: absolute;
+  width: 100%;
+  height: 100%;
   top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  left: 0;;
   pointer-events: none;
 }
 
