--- a/src/components/ss-popover/ss-popover.scss
+++ b/src/components/ss-popover/ss-popover.scss
@@ -1,21 +1,62 @@
-.has-popover {
+:host {
+    display: flex;
+    width: 100%;
+    height: 100%;
     position: relative;
 }
+
+.has-popover {
+    position: relative;
+    display: flex;
+    // width: 100%;
+    // height: 100%;
+}
+
+.popover-toggle {
+    width: 28px;
+}
+
+.default__content {
+    width: 200px; height: 200px; display: flex; justify-content: center; align-items: center;
+}
+
+ul {
+    display: flex;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+
+  li {
+    width: 80px;
+    height: 100%;
+    margin: 0 24px;
+    background-color: #f1f1f1;
+  }
 
 .popover {
     background-color: #f1f1f1;
     position: absolute;
     display: flex;
-    width: 400px;
-    height: 400px;
-    margin-top: 24px;
-    right: 24px;
+    width: auto;
+    height: auto;
+    top: 0;
+    will-change: transform;
     visibility: hidden;
     opacity: 0;
     pointer-events: none;
-    transform: scale(.8);
+    // transform: scale(.8);
+    // transform-origin: -150%;
     z-index: -999;
-    transition: all 250ms ease-in-out;
+    transition: all 200ms ease-in-out;
+
+    &.left {
+        left: 0;
+    }
+
+    &.right {
+        right: 0;
+    }
 }
   
 .show {
@@ -23,7 +64,7 @@
     visibility: visible;
     opacity: 1;
     pointer-events: auto;
-    transform: scale(1);
+    // transform: scale(1);
 }
   
   slot[name=title] {
