--- a/src/components/ss-popover/ss-popover.scss
+++ b/src/components/ss-popover/ss-popover.scss
@@ -2,22 +2,37 @@
     display: flex;
     width: 100%;
     height: 100%;
-    position: relative;
 }
 
 .has-popover {
     position: relative;
-    display: flex;
-    // width: 100%;
-    // height: 100%;
 }
 
 .popover-toggle {
-    width: 28px;
+    display: flex;
+    width: 100%;
+    height: 100%;
 }
 
-.default__content {
-    width: 200px; height: 200px; display: flex; justify-content: center; align-items: center;
+.popover__button {
+    width: 32px;
+    height: 32px;
+    background-color: #eee;
+    border-radius: 50%;
+}
+
+.popover__content {
+    width: 200px; 
+    height: 200px; 
+    display: flex; 
+    justify-content: center; 
+    align-items: center;
+    background-color: #fff;
+    font-family: 'Verdana';
+    color: rgba(0,0,0,.54);
+    border: 1px solid #eee;
+    border-radius: 2px;
+    font-size: 14px;
 }
 
 ul {
@@ -35,7 +50,7 @@ ul {
   }
 
 .popover {
-    background-color: #f1f1f1;
+    background-color: transparent;
     position: absolute;
     display: flex;
     width: auto;
@@ -45,18 +60,9 @@ ul {
     visibility: hidden;
     opacity: 0;
     pointer-events: none;
-    // transform: scale(.8);
-    // transform-origin: -150%;
     z-index: -999;
     transition: all 200ms ease-in-out;
-
-    &.left {
-        left: 0;
-    }
-
-    &.right {
-        right: 0;
-    }
+    transform: translate3d(0, 0, 0) scale(.8);
 }
   
 .show {
