--- a/src/components/ss-popover/ss-popover.scss
+++ b/src/components/ss-popover/ss-popover.scss
@@ -28,7 +28,7 @@
     justify-content: center; 
     align-items: center;
     background-color: #fff;
-    font-family: 'Verdana';
+    font-family: 'Roboto';
     color: rgba(0,0,0,.54);
     border: 1px solid #eee;
     border-radius: 2px;
