--- a/src/components/ss-sheath/ss-sheath.scss
+++ b/src/components/ss-sheath/ss-sheath.scss
@@ -1,16 +1,16 @@
 :host {
   display: flex;
+  flex: 1;
+  flex-direction: column;
 }
 
 .sheath {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
   z-index: 1;
   position: relative;
   height: 100%;
   overflow: hidden;
   transition: all 200ms ease;
-}
-
-.push {
-  // padding-left: 230px;
 }
