--- a/src/components/ss-button/ss-button.scss
+++ b/src/components/ss-button/ss-button.scss
@@ -16,12 +16,6 @@ button {
   overflow: hidden;
   -webkit-tap-highlight-color: transparent;
 
-  &:focus {
-    .ripple {
-      // animation-fill-mode: forwards;
-    }
-  }
-
   &.light {
     .ripple {
       background-color: rgba(255, 255, 255, 0.4);
@@ -110,19 +104,28 @@ button {
   }
 }
 
-.ripple {
-  border-radius: 50%;
-  background: rgba(0, 0, 0, 0.2);
-  transform: scale(0);
-  position: absolute;
-  opacity: 1;
-  animation: rippleDrop .4s linear;
+// .ripple {
+//   border-radius: 50%;
+//   background: rgba(0, 0, 0, 0.2);
+//   transform: scale(0);
+//   position: absolute;
+//   opacity: 1;
+//   animation: rippleDrop .4s linear;
   
-}
+// }
 
 @keyframes rippleDrop {
   100% {
     transform: scale(2);
     opacity: 0;
   }
+}
+
+.ripple {
+  border-radius: 50%;
+  background: rgba(255, 255, 255, 0.2);
+  position: absolute;
+  pointer-events: none;
+  transition: all 600ms cubic-bezier(0,0,.2,1);
+  transform: scale(0);
 }
