--- a/src/components/ss-button/ss-button.scss
+++ b/src/components/ss-button/ss-button.scss
@@ -114,12 +114,12 @@ button {
   
 // }
 
-@keyframes rippleDrop {
-  100% {
-    transform: scale(2);
-    opacity: 0;
-  }
-}
+// @keyframes rippleDrop {
+//   100% {
+//     transform: scale(2);
+//     opacity: 0;
+//   }
+// }
 
 .ripple {
   border-radius: 50%;
