--- a/src/components/ss-button/ss-button.scss
+++ b/src/components/ss-button/ss-button.scss
@@ -2,6 +2,10 @@ $default-primary-color: #448aff;
 $default-secondary-color: #ffb944;
 $default-danger-color: #f54e71;
 
+:host {
+  position: absolute;
+}
+
 button {
   border: none;
   cursor: pointer;
@@ -104,28 +108,12 @@ button {
   }
 }
 
-// .ripple {
-//   border-radius: 50%;
-//   background: rgba(0, 0, 0, 0.2);
-//   transform: scale(0);
-//   position: absolute;
-//   opacity: 1;
-//   animation: rippleDrop .4s linear;
-  
-// }
 
-// @keyframes rippleDrop {
-//   100% {
-//     transform: scale(2);
-//     opacity: 0;
-//   }
-// }
-
-// .ripple {
-//   border-radius: 50%;
-//   background: rgba(255, 255, 255, 0.1);
-//   position: absolute;
-//   pointer-events: none;
-//   transition: all 450ms cubic-bezier(0,0,.2,1);
-//   transform: scale(0);
-// }
+.ripple {
+  border-radius: 50%;
+  background: rgba(255, 255, 255, 0.1);
+  position: absolute;
+  pointer-events: none;
+  transition: all 450ms cubic-bezier(0,0,.2,1);
+  transform: scale(0);
+}
