--- a/src/components/ss-sidebar/ss-sidebar.scss
+++ b/src/components/ss-sidebar/ss-sidebar.scss
@@ -3,7 +3,7 @@
   width: 100%;
   height: 100%;
   background-color: #fff;
-  background-color: #fbfcff;
+  // background-color: #fbfcff;
   position: absolute;
   top: 0;
   bottom: 0;
