--- a/src/global/app.scss
+++ b/src/global/app.scss
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 html, body {
   display: flex;
   flex-direction: column;
@@ -7,4 +11,8 @@ html, body {
   width: 100%;
   margin: 0;
   padding: 0;
+}
+
+body {
+  background-color: #f1f1f1;
 }
