--- a/src/components/ss-input/ss-input.scss
+++ b/src/components/ss-input/ss-input.scss
@@ -46,8 +46,8 @@ $error-border-color: #ff3333;
   
   &:focus ~ .floating-label,
   &:not(:focus).has-value ~ .floating-label {
-    top: -1px;
-    font-size: 11px;
+    width: 133.333333333333333%;
+    transform: translateY(-8px) scale(.75) perspective(100px) translateZ(0.001px)
   }
 
   &:invalid:not(:focus) {
@@ -78,10 +78,12 @@ input.input-control {
   pointer-events: none;
   left: 14px;
   top: 10px;
-  transition: 0.15s ease-out;
+  width: 100%;
   font-size: 14px;
   line-height: 24px;
   opacity: 0.6;
+  transition: transform .4s cubic-bezier(.25,.8,.25,1),color .4s cubic-bezier(.25,.8,.25,1),width .4s cubic-bezier(.25,.8,.25,1);
+  transform-origin: 0 0;
   transform: translate3d(0, 0, 0);
   -webkit-font-smoothing: antialiased !important;
 }
