add buttons + fix button css

--- a/src/components/ss-button/ss-button.scss
+++ b/src/components/ss-button/ss-button.scss
@@ -12,7 +12,7 @@ button {
   cursor: pointer;
   border-radius: 2px;
   padding: 8px 8px;
-  width: 88px;
+  min-width: 88px;
   outline: 0;
   font-weight: 500;
   font-family: 'Roboto', sans-serif;
