--- a/src/global/app.scss
+++ b/src/global/app.scss
@@ -16,3 +16,10 @@ html, body {
 body {
   background-color: #f1f1f1;
 }
+
+.block {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 16px;
+}
