--- a/src/components/ss-topbar/ss-topbar.scss
+++ b/src/components/ss-topbar/ss-topbar.scss
@@ -56,6 +56,14 @@
     }
   }
 
+  .sidebar-button__sheath {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+  }
+
   .logo__sheath {
     display: flex;
     justify-content: flex-start;
@@ -65,7 +73,7 @@
 
     .logo {
       display: flex;
-      justify-content: center;
+      justify-content: flex-start;
       align-items: center;
       width: 120px;
       height: 48px;
