--- a/src/components/ss-sidebar/ss-sidebar.scss
+++ b/src/components/ss-sidebar/ss-sidebar.scss
@@ -3,10 +3,10 @@
   width: 100%;
   height: 100%;
   background-color: #fff;
-  // background-color: #fbfcff;
   position: absolute;
   top: 0;
   bottom: 0;
+  z-index: 999;
   transition: all 200ms ease;
 
   &.start {
