--- a/src/components/ss-topbar/ss-topbar.scss
+++ b/src/components/ss-topbar/ss-topbar.scss
@@ -62,6 +62,7 @@
     align-items: center;
     width: 100%;
     height: 100%;
+    width: 80px;
   }
 
   .logo__sheath {
@@ -70,13 +71,18 @@
     align-items: center;
     height: 100%;
     padding: 0 24px;
+    flex: 1;
 
     .logo {
       display: flex;
       justify-content: flex-start;
       align-items: center;
-      width: 120px;
-      height: 48px;
+      height: 42px;
+
+      img {
+        border-radius: 50%;
+        height: 42px;
+      }
 
       span {
         font-family: 'Roboto';
