--- a/src/components/ss-sheath/ss-sheath.scss
+++ b/src/components/ss-sheath/ss-sheath.scss
@@ -9,7 +9,7 @@
   z-index: 1;
   position: relative;
   height: 100%;
-  overflow: hidden;
+  overflow-y: auto;
   transition: all 200ms ease;
   z-index: 1;
 }
