style updates, finished list component, added grid and breakpoints, improved topbar

--- a/src/components/ss-list/ss-list.scss
+++ b/src/components/ss-list/ss-list.scss
@@ -1,50 +1,59 @@
-ul {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-  transition: all 250ms ease;
+ss-list {
 
-  li {
-    transition: all 250ms ease;
-    height: 48px;
-    a {
-      display: block;
-      padding: 0 20px;
-      color: #696969;
-      font-size: 1.077rem;
-      line-height: 38px;
-      text-overflow: ellipsis;
+  ul {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    transition: all 250ms ease-in-out;
+    background-color: #fff;
+    padding: 8px;
+  
+    li {
+      transition: all 250ms ease-in-out;
+      height: 48px;
+      background-color: #eee;
       overflow: hidden;
-      white-space: nowrap;
-    }
-
-    &.active {
+  
       a {
-        padding-left: 20px;
-        font-weight: 500;
-        color: #4285f4;
+        display: block;
+        padding: 0 20px;
+        color: #696969;
+        font-size: 1.077rem;
+        line-height: 38px;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        white-space: nowrap;
+      }
+  
+      &.active {
+        a {
+          padding-left: 20px;
+          font-weight: 500;
+          color: #4285f4;
+        }
       }
     }
+  
+    li.divider {
+      padding: 20px 20px 0;
+      color: #7b7b7b;
+      line-height: 30px;
+      font-weight: 600;
+      text-transform: uppercase;
+      font-size: .8462rem;
+    }
   }
-
-  li.divider {
-    padding: 20px 20px 0;
-    color: #7b7b7b;
-    line-height: 30px;
-    font-weight: 600;
-    text-transform: uppercase;
-    font-size: .8462rem;
-  }
-}
-
-.child {
-  opacity: 0;
-  height: 0;
-}
-
-li.expanded {
+  
   .child {
-    opacity: 1;
-    height: auto;
+    opacity: 0;
+    // height: 0;
+    display: none;
+  }
+  
+  li.expanded {
+    .child {
+      opacity: 1;
+      // height: auto;
+    }
   }
 }
