--- a/src/components/ss-button/ss-button.scss
+++ b/src/components/ss-button/ss-button.scss
@@ -12,6 +12,7 @@ button {
   cursor: pointer;
   border-radius: 2px;
   padding: 8px 8px;
+  padding: 8px 16px;
   min-width: 88px;
   outline: 0;
   font-weight: 500;
@@ -65,7 +66,7 @@ button {
     background-color: #dfdfdf;
   }
   &.plain {
-    color: #1a1a1a;
+    color: #595f6d;
   }
   &.primary {
     color: var(--app-primary-color, $default-primary-color);
