--- a/src/components/ss-sheath/ss-sheath.scss
+++ b/src/components/ss-sheath/ss-sheath.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex: 1;
   flex-direction: column;
+  overflow:hidden;
 }
 
 .sheath, .sheath-content {
@@ -9,8 +10,23 @@
   z-index: 1;
   position: relative;
   height: 100%;
-  overflow-y: auto;
-  overflow-x: hidden;
+  overflow: hidden;
   transition: all 200ms ease;
   z-index: 1;
+}
+
+.sheath-content {
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+.sheath-content::-webkit-scrollbar {
+  height: 6px;
+  width: 6px;
+}
+
+.sheath-content::-webkit-scrollbar-thumb {
+  outline: 1px solid #333;
+  border-radius: 3px;
+  background-color: rgba(0,0,0,.25);
 }
