--- a/src/components/ss-topbar/ss-topbar.scss
+++ b/src/components/ss-topbar/ss-topbar.scss
@@ -1,9 +1,14 @@
 //Global Styles
 
-:host {
+ss-topbar {
+  position: relative;
   display: flex;
   flex-direction: row;
   width: 100%;
+  min-height: 64px;
+  background-color: #fff;
+  box-shadow: 0 0.25rem 0.125rem 0 rgba(0,0,0,0.05);
+  z-index: 2;
 }
 
 .topbar__sheath {
@@ -12,7 +17,34 @@
   width: 100%;
 }
 
-.topbar__row {
+.sidebar-button__sheath {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  width: 80px;
+}
+
+.nav-nodes {
+  padding: 0 0px;
+
+  ul {
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+
+  li {
+    padding: 0 6px;
+  }
+}
+
+
+
+.topbar__row, ss-row {
   display: flex;
   flex-direction: row;
   justify-content: center;
