--- a/src/global/app.scss
+++ b/src/global/app.scss
@@ -1,3 +1,6 @@
+@import 'grid/_breakpoints';
+@import 'grid/_grid';
+
 * {
   box-sizing: border-box;
 }
@@ -22,4 +25,89 @@ body {
   justify-content: flex-start;
   align-items: center;
   padding: 16px;
+}
+
+slot[name=row-1] {
+  .topbar__row {
+    background-color: #fff;
+  }
+}
+
+slot[name=row-2] {
+  .topbar__row {
+    background-color: #fff;
+    height: 42px;
+    // max-width: 600px;
+    // margin: 0 auto;
+  }
+}
+
+.logo__sheath {
+  width: 100px;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.logo {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+
+  img {
+    width: 100%;
+    max-width: 42px;
+    max-height: 42px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  }
+}
+
+
+.test-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 200px;
+  width: 100%;
+  background-color: #eee;
+
+  .box-1, .box-3 {
+    flex: 1;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .box-2 {
+    width: 700px;
+    border: 2px solid #fff;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #ca3838;
+
+    p {
+      color: #fff;
+      font-size: 42px;
+      font-family: 'Roboto';
+      letter-spacing: 2px;
+    }
+  }
+
+  .box-3 {
+    background-color: #ca3838;
+    border: 2px solid #fff;
+    p {
+      color: #fff;
+      font-size: 24px;
+      font-family: 'Roboto';
+      letter-spacing: 2px;
+      text-align: center;
+    }
+  }
 }
